[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/lobby_state.gd" type="Script" id=1]
[ext_resource path="res://scenes/Gorilla.jpg" type="Texture" id=2]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1026.0
margin_bottom = 602.0

[node name="Panel" type="Panel" parent="MarginContainer"]
margin_right = 1026.0
margin_bottom = 602.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel"]
margin_top = 17.0
margin_right = 1027.0
margin_bottom = 593.0

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/Panel/VBoxContainer"]
margin_right = 1027.0
margin_bottom = 14.0
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/Panel/VBoxContainer/HBoxContainer3"]
margin_left = 473.0
margin_right = 554.0
margin_bottom = 14.0
size_flags_vertical = 5
text = "100 v Gorilla"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Panel/VBoxContainer"]
margin_top = 18.0
margin_right = 1027.0
margin_bottom = 528.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Panel/VBoxContainer/HBoxContainer"]
margin_left = 37.0
margin_right = 989.0
margin_bottom = 510.0
texture = ExtResource( 2 )
stretch_mode = 6

[node name="PlayerList" type="ItemList" parent="MarginContainer/Panel/VBoxContainer"]
margin_top = 532.0
margin_right = 1027.0
margin_bottom = 532.0

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/Panel/VBoxContainer"]
margin_top = 536.0
margin_right = 1027.0
margin_bottom = 556.0
size_flags_horizontal = 3
alignment = 1

[node name="StartButton" type="Button" parent="MarginContainer/Panel/VBoxContainer/HBoxContainer2"]
margin_left = 391.0
margin_right = 474.0
margin_bottom = 20.0
text = "Start Game"

[node name="ReadyButton" type="Button" parent="MarginContainer/Panel/VBoxContainer/HBoxContainer2"]
margin_left = 478.0
margin_right = 528.0
margin_bottom = 20.0
text = "Ready"

[node name="InviteBtn" type="Button" parent="MarginContainer/Panel/VBoxContainer/HBoxContainer2"]
margin_left = 532.0
margin_right = 632.0
margin_bottom = 20.0
text = "Invite Friends"

[node name="WaitingLabel" type="Label" parent="MarginContainer/Panel/VBoxContainer/HBoxContainer2"]
margin_left = 636.0
margin_top = 3.0
margin_right = 636.0
margin_bottom = 17.0
